# intentflow

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  phase2_report.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
completions/: intentflow.bash  intentflow.fish  intentflow.zsh
docs/: architecture.md  design_principles.md  examples.md  labels.md  language_spec.md  roadmap.md
examples/: code_review.iflow  diagnose.iflow  high_risk_deploy.iflow  incident_pipeline.iflow  opensource_triage.iflow  production_diagnosis.iflow  research_question.iflow  research_synthesis.iflow  triage_issue.iflow
examples/workspace/: comments.txt  config.txt  diff.txt  issue_body.txt  logs.txt  primary_sources.txt  recent_commits.txt  recent_publications.txt  related_issues.txt  replication_studies.txt  (+3 more)
intentflow/: __init__.py  actions.py  analyzer.py  api.py  auditor.py  backends.py  cli.py  compiler.py  explain.py  formatter.py  iflow_ast.py  judges.py  linter.py  parser.py  runtime.py  tools.py
scripts/: generate_completions.py
tests/: test_actions.py  test_analyzer.py  test_api.py  test_approvals.py  test_auditor.py  test_backends.py  test_cassette.py  test_cli.py  test_cli_approvals.py  test_compiler.py  test_completions.py  test_dependency_policy.py  test_examples.py  test_explain.py  test_formatter.py  test_judges.py  test_linter.py  test_parser.py  test_pipeline.py  test_runtime.py  test_tools.py  test_trace_chain.py
