[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intentflow"
version = "0.3.0"
description = "An experimental language for governed cognitive processes: goals, evidence, uncertainty, verification, and auditable agent execution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "IntentFlow contributors" }]
keywords = ["llm", "agents", "language", "compiler", "verification"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]
dependencies = []

[project.scripts]
intentflow = "intentflow.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
llm = ["anthropic>=0.40"]
openai = ["openai>=1.40"]

[tool.setuptools.packages.find]
include = ["intentflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
